--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
         "github": "https://github.com/lykmapipo"
     }],
     "devDependencies": {
-        "chai": "^2.0.0",
-        "faker": "^2.1.2",
+        "chai": "^3.2.0",
+        "express": "^4.13.3",
+        "faker": "^3.0.1",
         "grunt": "^0.4.5",
-        "grunt-contrib-jshint": "^0.11.1",
+        "grunt-contrib-jshint": "^0.11.2",
         "grunt-mocha-test": "^0.12.7",
-        "jshint-stylish": "^1.0.1",
-        "mocha": "^2.1.0",
+        "jshint-stylish": "^2.0.1",
+        "mocha": "^2.2.5"
+    },
+    "dependencies": {
+        "http-status-codes": "^1.0.5",
+        "lodash": "^3.10.1"
     }
 }
