--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "status",
         "code",
         "responses",
+        "respond",
         "friendly"
     ],
     "author": {
@@ -42,7 +43,9 @@
         "grunt-contrib-jshint": "^0.11.2",
         "grunt-mocha-test": "^0.12.7",
         "jshint-stylish": "^2.0.1",
-        "mocha": "^2.2.5"
+        "mocha": "^2.2.5",
+        "mock-express-request": "^0.1.1",
+        "mock-express-response": "^0.1.1"
     },
     "dependencies": {
         "http-status-codes": "^1.0.5",
