--- a/package.json
+++ b/package.json
@@ -1,57 +1,55 @@
 {
-  "name": "express-respond",
-  "version": "0.1.0",
-  "description": "HTTP responses middleware for expressjs",
-  "main": "index.js",
-  "scripts": {
-    "test": "grunt test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lykmapipo/express-respond.git"
-  },
-  "keywords": [
-    "middleware",
-    "express",
-    "expressjs",
-    "http",
-    "status",
-    "code",
-    "responses",
-    "respond",
-    "friendly"
-  ],
-  "author": {
-    "name": "lykmapipo",
-    "email": "lallyelias87@gmail.com",
-    "url": "https://github.com/lykmapipo"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lykmapipo/express-respond/issues"
-  },
-  "homepage": "https://github.com/lykmapipo/express-respond",
-  "contributors": [
-    {
-      "name": "lykmapipo",
-      "github": "https://github.com/lykmapipo"
+    "name": "express-respond",
+    "version": "0.1.0",
+    "description": "HTTP responses middleware for expressjs",
+    "main": "index.js",
+    "scripts": {
+        "test": "grunt test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lykmapipo/express-respond.git"
+    },
+    "keywords": [
+        "middleware",
+        "express",
+        "expressjs",
+        "http",
+        "status",
+        "code",
+        "responses",
+        "respond",
+        "friendly"
+    ],
+    "author": {
+        "name": "lykmapipo",
+        "email": "lallyelias87@gmail.com",
+        "url": "https://github.com/lykmapipo"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/lykmapipo/express-respond/issues"
+    },
+    "homepage": "https://github.com/lykmapipo/express-respond",
+    "contributors": [{
+        "name": "lykmapipo",
+        "github": "https://github.com/lykmapipo"
+    }],
+    "devDependencies": {
+        "chai": "^3.2.0",
+        "ejs": "^2.3.3",
+        "express": "^4.13.3",
+        "faker": "^3.0.1",
+        "grunt": "^0.4.5",
+        "grunt-contrib-jshint": "^0.11.2",
+        "grunt-mocha-test": "^0.12.7",
+        "jshint-stylish": "^2.0.1",
+        "mocha": "^2.2.5",
+        "mock-express-request": "^0.1.1",
+        "mock-express-response": "^0.1.1"
+    },
+    "dependencies": {
+        "http-status-codes": "^1.0.5",
+        "lodash": "^3.10.1"
     }
-  ],
-  "devDependencies": {
-    "chai": "^3.2.0",
-    "ejs": "^2.3.3",
-    "express": "^4.13.3",
-    "faker": "^3.0.1",
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-mocha-test": "^0.12.7",
-    "jshint-stylish": "^2.0.1",
-    "mocha": "^2.2.5",
-    "mock-express-request": "^0.1.1",
-    "mock-express-response": "^0.1.1"
-  },
-  "dependencies": {
-    "http-status-codes": "^1.0.5",
-    "lodash": "^3.10.1"
-  }
 }
