--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "jshint-stylish": "^2.0.1",
         "mocha": "^2.2.5",
         "mock-express-request": "^0.1.1",
-        "mock-express-response": "^0.1.1"
+        "mock-express-response": "^0.1.1",
+        "supertest": "^1.1.0"
     },
     "dependencies": {
         "lodash": "^3.10.1"
