update response method docs

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "http",
         "status",
         "code",
+        "method",
+        "content",
+        "negotiation",
+        "negotiate",
         "responses",
         "respond",
         "friendly"
