--- a/package.json
+++ b/package.json
@@ -35,23 +35,25 @@
         "url": "https://github.com/lykmapipo/express-respond/issues"
     },
     "homepage": "https://github.com/lykmapipo/express-respond",
-    "contributors": [{
-        "name": "lykmapipo",
-        "github": "https://github.com/lykmapipo"
-    }],
+    "contributors": [
+        {
+            "name": "lykmapipo",
+            "github": "https://github.com/lykmapipo"
+        }
+    ],
     "devDependencies": {
-        "chai": "^3.2.0",
-        "ejs": "^2.3.3",
-        "express": "^4.13.3",
-        "faker": "^3.0.1",
+        "chai": "^4.1.2",
+        "ejs": "^2.5.7",
+        "express": "^4.15.4",
+        "faker": "^4.1.0",
         "grunt": "^1.0.1",
         "grunt-contrib-jshint": "^1.1.0",
         "grunt-mocha-test": "^0.13.2",
-        "jshint-stylish": "^2.0.1",
-        "mocha": "^3.2.0",
+        "jshint-stylish": "^2.2.1",
+        "mocha": "^3.5.3",
         "mock-express-request": "^0.2.0",
-        "mock-express-response": "^0.2.0",
-        "supertest": "^2.0.1"
+        "mock-express-response": "^0.2.1",
+        "supertest": "^3.0.0"
     },
     "dependencies": {
         "lodash": "^4.17.4"
