--- a/package.json
+++ b/package.json
@@ -1,61 +1,59 @@
 {
-    "name": "express-respond",
-    "version": "0.4.0",
-    "description": "HTTP response methods with auto content negotiation for expressjs",
-    "main": "index.js",
-    "scripts": {
-        "test": "grunt test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/lykmapipo/express-respond.git"
-    },
-    "keywords": [
-        "middleware",
-        "express",
-        "expressjs",
-        "http",
-        "status",
-        "code",
-        "method",
-        "content",
-        "negotiation",
-        "negotiate",
-        "responses",
-        "respond",
-        "friendly"
-    ],
-    "author": {
-        "name": "lykmapipo",
-        "email": "lallyelias87@gmail.com",
-        "url": "https://github.com/lykmapipo"
-    },
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/lykmapipo/express-respond/issues"
-    },
-    "homepage": "https://github.com/lykmapipo/express-respond",
-    "contributors": [
-        {
-            "name": "lykmapipo",
-            "github": "https://github.com/lykmapipo"
-        }
-    ],
-    "devDependencies": {
-        "chai": "^4.1.2",
-        "ejs": "^2.6.1",
-        "express": "^4.16.3",
-        "faker": "^4.1.0",
-        "grunt": "^1.0.3",
-        "grunt-contrib-jshint": "^1.1.0",
-        "grunt-mocha-test": "^0.13.3",
-        "jshint-stylish": "^2.2.1",
-        "mocha": "^5.2.0",
-        "mock-express-request": "^0.2.2",
-        "mock-express-response": "^0.2.2",
-        "supertest": "^3.1.0"
-    },
-    "dependencies": {
-        "lodash": "^4.17.10"
+  "name": "express-respond",
+  "version": "1.0.0",
+  "description": "HTTP response methods with auto content negotiation for expressjs",
+  "main": "index.js",
+  "scripts": {
+    "test": "grunt test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lykmapipo/express-respond.git"
+  },
+  "keywords": [
+    "lykmapipo",
+    "middleware",
+    "express",
+    "expressjs",
+    "http",
+    "status",
+    "code",
+    "method",
+    "content",
+    "responses",
+    "respond",
+    "friendly"
+  ],
+  "author": {
+    "name": "lykmapipo",
+    "email": "lallyelias87@gmail.com",
+    "url": "https://github.com/lykmapipo"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/lykmapipo/express-respond/issues"
+  },
+  "homepage": "https://github.com/lykmapipo/express-respond",
+  "contributors": [
+    {
+      "name": "lykmapipo",
+      "github": "https://github.com/lykmapipo"
     }
+  ],
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "express": ">=4.16.4",
+    "faker": "^4.1.0",
+    "grunt": "^1.0.3",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-mocha-test": "^0.13.3",
+    "jshint-stylish": "^2.2.1",
+    "mocha": "^5.2.0",
+    "supertest": "^3.3.0"
+  },
+  "dependencies": {
+    "@lykmapipo/include": ">=0.1.1",
+    "lodash": ">=4.17.11",
+    "statuses": ">=1.5.0"
+  }
 }
