--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "supertest": "^3.4.2"
   },
   "dependencies": {
+    "@lykmapipo/env": ">=0.5.0",
     "@lykmapipo/include": ">=0.2.0",
     "lodash": ">=4.17.11",
     "statuses": ">=1.5.0"
