--- a/package.json
+++ b/package.json
@@ -47,14 +47,15 @@
     "grunt": "^1.0.4",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-mocha-test": "^0.13.3",
+    "handlebars": "^4.1.2",
     "jshint-stylish": "^2.2.1",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "@lykmapipo/common": ">=0.19.1",
-    "@lykmapipo/env": ">=0.7.9",
-    "@lykmapipo/include": ">=0.2.4",
+    "@lykmapipo/common": ">=0.20.2",
+    "@lykmapipo/env": ">=0.8.1",
+    "@lykmapipo/include": ">=0.2.5",
     "lodash": ">=4.17.11",
     "statuses": ">=1.5.0"
   }
