--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "handlebars": "^4.1.2",
     "jshint-stylish": "^2.2.1",
     "mocha": "^6.1.4",
+    "shelljs": "^0.8.3",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "@lykmapipo/common": ">=0.22.0",
-    "@lykmapipo/env": ">=0.9.1",
+    "@lykmapipo/common": ">=0.22.3",
+    "@lykmapipo/env": ">=0.9.5",
     "@lykmapipo/include": ">=0.2.5",
     "lodash": ">=4.17.11",
     "statuses": ">=1.5.0"
