chore(deps): force latest version & audit fix

--- a/package.json
+++ b/package.json
@@ -49,15 +49,16 @@
     "grunt-mocha-test": "^0.13.3",
     "handlebars": "^4.1.2",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^6.1.4",
+    "lodash.template": "^4.5.0",
+    "mocha": "^6.2.0",
     "shelljs": "^0.8.3",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "@lykmapipo/common": ">=0.22.3",
-    "@lykmapipo/env": ">=0.9.5",
-    "@lykmapipo/include": ">=0.2.5",
-    "lodash": ">=4.17.11",
+    "@lykmapipo/common": ">=0.25.1",
+    "@lykmapipo/env": ">=0.12.1",
+    "@lykmapipo/include": ">=0.2.6",
+    "lodash": ">=4.17.15",
     "statuses": ">=1.5.0"
   }
 }
