--- a/package.json
+++ b/package.json
@@ -42,21 +42,24 @@
   ],
   "devDependencies": {
     "chai": "^4.2.0",
+    "dot-prop": "^5.2.0",
     "express": ">=4.17.1",
-    "faker": "^4.1.0",
-    "grunt": "^1.2.1",
+    "faker": "^5.1.0",
+    "grunt": "^1.3.0",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-mocha-test": "^0.13.3",
     "handlebars": "^4.7.6",
     "jshint-stylish": "^2.2.1",
     "lodash.template": "^4.5.0",
-    "mocha": "^8.1.1",
+    "minimist": "^1.2.5",
+    "mocha": "^8.1.3",
     "shelljs": "^0.8.4",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "websocket-extensions": "^0.1.4"
   },
   "dependencies": {
-    "@lykmapipo/common": ">=0.38.2",
-    "@lykmapipo/env": ">=0.17.16",
-    "lodash": ">=4.17.19"
+    "@lykmapipo/common": ">=0.39.1",
+    "@lykmapipo/env": ">=0.17.18",
+    "lodash": ">=4.17.20"
   }
 }
