--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
   "name": "express-respond",
   "version": "1.5.15",
   "description": "HTTP response methods with auto content negotiation for expressjs",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "scripts": {
-    "test": "grunt test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lykmapipo/express-respond.git"
+    "clean": "rimraf lib dist es umd logs",
+    "prepare": "husky install",
+    "prebuild": "npm test && npm run clean",
+    "build": "rollup -c",
+    "lint": "eslint --fix --ext .js src/ test/ examples/ rollup.config.js",
+    "prettier": "prettier --write '**/*.{md,json,yml,html}'",
+    "pretest": "npm run lint",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text mocha --exit --timeout=8000 --require @babel/register test/**/*.spec.js",
+    "test:unit": "NODE_ENV=test npm run pretest && NODE_ENV=test mocha --exit --timeout=8000 --require @babel/register test/unit/**/*.spec.js",
+    "test:integration": "NODE_ENV=test npm run pretest && NODE_ENV=test mocha --exit --timeout=8000 --require @babel/register test/integration/**/*.spec.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "docs": "doxdox 'lib/**/*.js' -p package.json -l markdown -o DOCUMENTATION.md",
+    "cmt": "git add -A && git-cz",
+    "changelog": "changelog",
+    "chore:deps": "ncu -u && npm install --save",
+    "lint:config": "eslint --print-config rollup.config.js",
+    "examples": "NODE_ENV=development BASE_PATH=./examples babel-node ./examples/index.js"
   },
   "keywords": [
     "lykmapipo",
@@ -24,42 +37,106 @@
     "respond",
     "friendly"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lykmapipo/express-respond.git"
+  },
   "author": {
     "name": "lykmapipo",
     "email": "lallyelias87@gmail.com",
     "url": "https://github.com/lykmapipo"
   },
+  "contributors": [
+    {
+      "name": "lykmapipo",
+      "email": "lallyelias87@gmail.com",
+      "url": "https://github.com/lykmapipo"
+    },
+    {
+      "name": "rijkerd",
+      "url": "https://github.com/rijkerd"
+    },
+    {
+      "name": "codesxt",
+      "email": "brunofaundezv@gmail.com",
+      "url": "https://github.com/codesxt"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lykmapipo/express-respond/issues"
   },
-  "homepage": "https://github.com/lykmapipo/express-respond",
-  "contributors": [
-    {
-      "name": "lykmapipo",
-      "github": "https://github.com/lykmapipo"
-    }
-  ],
+  "homepage": "https://github.com/lykmapipo/express-respond#readme",
   "devDependencies": {
-    "chai": "^4.3.0",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/register": "^7.14.5",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@commitlint/travis-cli": "^13.1.0",
+    "chai": "^4.3.4",
+    "commitizen": "^4.2.4",
+    "coveralls": "^3.1.1",
+    "cz-conventional-changelog": "^3.3.0",
     "dot-prop": "^6.0.1",
-    "express": ">=4.17.1",
-    "faker": "^5.4.0",
-    "grunt": "^1.3.0",
-    "grunt-contrib-jshint": "^3.0.0",
-    "grunt-mocha-test": "^0.13.3",
+    "doxdox": "^3.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^36.0.6",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "faker": "^5.5.3",
+    "generate-changelog": "^1.8.0",
     "handlebars": "^4.7.7",
-    "jshint-stylish": "^2.2.1",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
     "lodash.template": "^4.5.0",
+    "mime": "^2.5.2",
     "minimist": "^1.2.5",
-    "mocha": "^8.3.0",
+    "mocha": "^9.0.3",
+    "npm-check-updates": "^11.8.3",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
+    "qs": "^6.10.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.56.0",
     "shelljs": "^0.8.4",
-    "supertest": "^6.1.3",
-    "websocket-extensions": "^0.1.4"
+    "supertest": "^6.1.4",
+    "websocket-extensions": "^0.1.4",
+    "yargs": "^17.1.0"
   },
   "dependencies": {
     "@lykmapipo/common": ">=0.42.9",
     "@lykmapipo/env": ">=0.17.29",
+    "express": ">=4.17.1",
     "lodash": ">=4.17.20"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ],
+    "*.{md,json,yml,html}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
