--- a/examples/.eslintrc
+++ b/examples/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "no-unused-vars": "off"
   }
 }
